--- a/project/writeup/report.tex
+++ b/project/writeup/report.tex
@@ -260,8 +260,14 @@ $\tau^2_2$ was set to $10 \times 10^{-6}$.
 \subsection{Model Check}
 
 \subsubsection{Simple Hierarchical Model with Gibbs Sampling and PyMC Implementations}
-Similar versions of the simple hierarchical model were implemented in class, so as expected, no issues were encountered in the implementation. This model did not account for temporal correlations. However, given that few departments had auto-correlated residuals for simple OLS, the posteriors obtained with this simple model should be very close to the one obtained with a more sophisticated model. 
+Similar versions of the simple hierarchical model were implemented in class, so as expected, no issues were encountered in the implementation. This model did not account for temporal correlations. However, given that few departments had auto-correlated residuals for simple OLS, the posteriors obtained with this simple model should be very close to the one obtained with a more sophisticated model. The traces were well-mixed; as shown for $\mu$ and $\mu_{jj}$ shown in Figure  \ref{traces}. The Gibbs sampler was run for 10,000 iterations and the first 1,000 were discarded.
 
+
+\begin{figure}[h!]\label{traces}
+\centering
+\includegraphics[width=1\textwidth]{project/writeup/traces_simple_model.png}
+\caption{Traces for $\mu$ and $\mu_{jj}$}
+\end{figure}
 
 \subsubsection{Gaussian Process Model}
 
