--- a/project/writeup/report.tex
+++ b/project/writeup/report.tex
@@ -8,6 +8,7 @@
 \usepackage[pdftex]{graphicx}	
 \usepackage{url}
 
+\usepackage[section]{placeins}
 
 \usepackage[bottom=1.5in, top=1.5in]{geometry}
 
@@ -72,7 +73,7 @@ An incident baseline was calculated from the 2019 NFORS data and applied to the 
 The various mobility types were highly correlated. Figure \ref{corr_mat} shows the correlation matrix for the mobility types for all departments. The correlations are as expected; for example workplace mobility is inversely correlated with residential mobility. Parks, however, is not highly correlated with the other mobility types.
 
 
-\begin{figure}[h]\label{corr_mat}
+\begin{figure}[!htb]\label{corr_mat}
 \centering
 \includegraphics[width=.7\textwidth]{corr.png}
 \caption{Correlation Matrix}
@@ -86,22 +87,23 @@ The next step was to determine whether the incident data could be approximated a
 \end{align*}
 Where $i$ is the fire department, $X_i$ is the design matrix including an intercept and transformed mobility data, $y_i$ is the response vector, $\beta_i \in \mathbb{R}^{p}$, and $I$ is the $n_i \times n_i$ identity matrix.  A simple linear regression model was fit to the data for each department. As shown in Figure \ref{normal}, the Q-Q plots showed  that the residuals were approximately normally distributed; therefore no further transformations of the data were necessary.\\
 
-Another concern was that the residuals (as plotted in Figure \ref{normal} - although some departments showed worse correlation than the 9 plotted) may be auto-correlated, in which case assuming that the covariance matrix was diagonal would not have been appropriate. Figure \ref{autocorr} shows ACF plots for all departments. Some departments (for example, departments 12, 13, 25, 29) have multiple correlation coefficients outside the 95 \% confidence internal. For some departments, auto-correlation is not an issue.
+Another concern was that the residuals (as plotted in Figure \ref{normal} - although some departments showed worse correlation than the 9 plotted) may be auto-correlated, in which case assuming that the covariance matrix is diagonal was not appropriate. Figure \ref{autocorr} shows ACF plots for all departments. Some departments (for example, departments 12, 13, 25, 29) had multiple correlation coefficients outside the 95 \% confidence internal. For some departments, auto-correlation was not an issue.
     
     
-\begin{figure}[h]\label{normal}
+\begin{figure}[!htb]\label{normal}
 \centering
 \includegraphics[width=.5\textwidth]{normal_approx_1.png}
 \caption{Plots showing residuals with fitted normal with same moments as the residuals (left), Q-Q plot (middle), residuals against time (right). Only the first 9 departments are shown.}
 \end{figure}
 
 
-\begin{figure}[h]\label{autocorr}
+\begin{figure}[!htb]\label{autocorr}
 \centering
 \includegraphics[width=1\textwidth]{acf_plots1.png}
 \caption{ACF plots for all departments for the residuals using linear regression on each department separately.}
 \end{figure}
 
+\newpage
 \section{Models}
 \subsection{Simple Hierarchical Model}
 As a first step before considering the autocorrelation in the residuals shown above, a simple model which did not account for auto-correlation was used:
@@ -245,7 +247,7 @@ The two full conditionals above do not simplify to known distributions. Random w
 \end{itemize}
 
 
-After some trial and error, $\sigma'$ was set to 0.1 for both $b$ and $\tau_^2$.\\
+After some trial and error, $\sigma'$ was set to 0.5 for both $b$ and $\tau_^2$.\\
 
 In order to calculate the GPs covariance matrices $C_i$, the squared exponential function was used:
 
@@ -260,9 +262,9 @@ $\tau^2_2$ was set to $10 \times 10^{-6}$.
 \subsection{Model Check}
 
 \subsubsection{Simple Hierarchical Model with Gibbs Sampling and PyMC Implementations}
-Similar versions of the simple hierarchical model were implemented in class, so as expected, no issues were encountered in the implementation. This model did not account for temporal correlations. However, given that few departments had auto-correlated residuals for simple OLS, the posteriors obtained with this simple model should be very close to the one obtained with a more sophisticated model. The traces were well-mixed; as shown for $\mu$ and $\mu_{jj}$ shown in Figure  \ref{traces}. The Gibbs sampler was run for 10,000 iterations and the first 1,000 were discarded.
+Similar versions of the simple hierarchical model were implemented in class, so as expected, no issues were encountered in the implementation. This model did not account for temporal correlations. However, given that few departments had auto-correlated residuals for simple OLS, the posteriors obtained with this simple model should be very close to the ones obtained with a more sophisticated model. The traces were well-mixed; as shown for $\mu$ and $\mu_{jj}$ in Figure  \ref{traces}. The Gibbs sampler was run for 10,000 iterations and the first 1,000 were discarded.\\
 
-\begin{figure}[h!]\label{traces}
+\begin{figure}[!htb]\label{traces}
 \centering
 \includegraphics[width=1\textwidth]{project/writeup/traces_simple_model.png}
 \caption{Traces for $\mu$ and $\mu_{jj}$}
@@ -271,23 +273,25 @@ Similar versions of the simple hierarchical model were implemented in class, so 
 
 The Gibbs sampler was also compared to the PyMC results. The posteriors looked very similar, except the posteriors for $\mu_2$ and $\Sigma_{22}$, as shown in Figure \ref{pymc1}. However, the posteriors for $\beta_2$ looked fairly similar as shown in Figure \ref{pymc2}. The differences may be due to the fact that the priors on $\sigma^2_i$ were different.
 
-\begin{figure}[h!]\label{pymc1}
+\begin{figure}[!htb]\label{pymc1}
 \centering
-\includegraphics[width=.6\textwidth]{project/writeup/compare_gibbs_pymc1.png}
-\caption{Traces for $\mu$ and $\mu_{jj}$}
+\includegraphics[width=.4\textwidth]{project/writeup/compare_gibbs_pymc1.png}
+\caption{Posteriors for $\mu$ and $\Sigma$}
 \end{figure}
 
 
-\begin{figure}[h!]\label{pymc2}
+\begin{figure}[!htb]\label{pymc2}
 \centering
 \includegraphics[width=1\textwidth]{project/writeup/compare_gibbs_pymc2.png}
-\caption{Traces for $\mu$ and $\mu_{jj}$}
+\caption{Posteriors for $\beta_2$}
 \end{figure}
+
+
 
 \subsubsection{Gaussian Process Model}
 
 
-\begin{figure}[h]\label{autocorr_after}
+\begin{figure}[!htb]\label{autocorr_after}
 \centering
 \includegraphics[width=1\textwidth]{acf_plots_after.png}
 \caption{ACF plots for all departments for the residuals of the hierarchical/Gaussian process model.}
