Updates from Overleaf

--- a/project/writeup/report.tex
+++ b/project/writeup/report.tex
@@ -300,7 +300,19 @@ The Gibbs sampler was also compared to the PyMC results. The posteriors looked v
 
 
 \subsection{Interpretation}
-The 
+
+
+\begin{figure}[!htb]\label{corr_mat}
+\centering
+\includegraphics[width=1\textwidth]{project/writeup/mean_betas.png}
+\caption{$\betas$ means}\end{figure}
+
+
+\begin{figure}[!htb]\label{corr_mat}
+\centering
+\includegraphics[width=1\textwidth]{project/writeup/box_plots.png}
+\caption{$\betas$ boxplots}
+\end{figure}
 
 
 \bibliography{refs} 
